# teensy-eurorack-software

./: CMakeLists.txt  LICENSE  README.md  library.json  library.properties  teensy.build.cmake.in
.github/workflows/: examples-ad5754_01-write-ad5754.yml  examples-ad5754_02-write-both-ad5754.yml  examples-ad7606.yml  examples-audio-audiotocv_01-audio-to-cv.yml  examples-audio-codec_01-mp3fileplayer.yml  examples-audio-codec_02-play-and-display.yml  examples-audio-cvout_01-cv-output.yml  examples-audio-displaylevels_01-display-levels.yml  examples-audio-libscope_02-input-scopes.yml  examples-audio-libscope_03-full-bandwidth.yml  examples-audio-libscope_04-audio-only-full-bandwidth.yml  examples-audio-simplescope_01-audiocv-scope.yml  examples-audio-simplescope_02-simple-cv-scope.yml  examples-audio_audio-thru-with-scope.yml  examples-graphics_00-graphicstest.yml  examples-graphics_01-heart.yml  examples-knobs_just-encoders-and-display.yml  examples-knobs_just-encoders.yml  examples-knobs_pots.yml  examples-midi_01-midiin-display.yml  examples-midi_02-midiout.yml  teensy-examples-ad5754-01.yml  teensy-examples-ad5754-02.yml  teensy-examples-ad7606.yml  teensy-examples-audio-codec-01_mp3fileplayer.yml  teensy-examples-audio-display-levels-01.yml  teensy-examples-audio-simplescope-01_audiocv_scope.yml  teensy-examples-audio-simplescope-02_simple_cv_scope.yml  teensy-examples-audio-thru_with_scope.yml  teensy.yml
cmake/toolchains/: teensy41.toolchain.cmake
examples/: CMakeLists.txt  README.md
examples/ad5754/01_write_ad5754/: 01_write_ad5754.cpp  CMakeLists.txt  README.md
examples/ad5754/02_write_both_ad5754/: 02_write_both_ad5754.cpp  CMakeLists.txt  README.md
examples/ad7606/: CMakeLists.txt  ad7606.cpp
examples/audio/: CMakeLists.txt
examples/audio/audio_thru_with_scope/: CMakeLists.txt  README.md  audio_thru_with_scope.cpp
examples/audio/audio_to_cv/01_audio_to_cv/: 01_audio_to_cv.cpp  CMakeLists.txt  README.md
examples/audio/codec/: CMakeLists.txt
examples/audio/codec/01_Mp3FilePlayer/: 01_Mp3FilePlayer.cpp  CMakeLists.txt  README.md
examples/audio/codec/02_Play_and_display/: CMakeLists.txt  README.md  picojpeg.h  player.cpp
examples/audio/cv_out/: CMakeLists.txt
examples/audio/cv_out/01_cv_output/: CMakeLists.txt  README.md
examples/audio/display_levels/01_display_levels/: 01_display_levels.cpp  CMakeLists.txt  README.md
examples/audio/libscope/02_input_scopes/: 02_input_scopes.cpp  CMakeLists.txt  README.md
examples/audio/libscope/03_full_bandwidth/: 03_full_bandwidth.cpp  CMakeLists.txt  README.md
examples/audio/libscope/04_audio_only_full_bandwidth/: 04_audio_only_full_bandwidth.cpp  CMakeLists.txt  README.md
examples/audio/pitch/: CMakeLists.txt
examples/audio/pitch/01_knob_pitch/: 01_knob_pitch.cpp  CMakeLists.txt
examples/audio/pitch/02_play_all_sd/: 02_play_all_sd.ino  CMakeLists.txt
examples/audio/simple_scope/01_audiocv_scope/: CMakeLists.txt  README.md
examples/audio/simple_scope/02_simple_cv_scope/: 02_simple_cv_scope.cpp  CMakeLists.txt  README.md
examples/graphics/00_graphicstest/: 00_graphicstest.cpp  CMakeLists.txt  README.md
examples/graphics/01_heart/: 01_heart.cpp  CMakeLists.txt  README.md
examples/knobs/: CMakeLists.txt
examples/knobs/just_encoders/: CMakeLists.txt  README.md  just_encoders.cpp
examples/knobs/just_encoders_and_display/: CMakeLists.txt  README.md  just_encoders_and_display.cpp
examples/knobs/pots/: CMakeLists.txt  pots.ino
examples/midi/01_MidiIn_display/: 01_MidiIn_display.cpp  CMakeLists.txt
examples/midi/02_MidiOut/: 02_MidiOut.cpp  CMakeLists.txt
src/: CMakeLists.txt  TeensyEurorack.h  ad5754.h
