cmake_minimum_required(VERSION 3.10)
project(graphicstest)
set(SOURCEFILES 00_graphicstest.cpp)
teensy_add_executable(graphicstest ${SOURCEFILES})
teensy_target_link_libraries(graphicstest teensy_libcurve teensy_eurorack_library ST7735_t3 SD SdFat Wire SPI arm_math cores)
target_link_libraries(graphicstest.elf m stdc++)