cmake_minimum_required(VERSION 3.10)
project(audio_only_full_bandwidth)
set(SOURCEFILES 04_audio_only_full_bandwidth.cpp)
teensy_add_executable(audio_only_full_bandwidth ${SOURCEFILES})
teensy_target_link_libraries(audio_only_full_bandwidth teensy_audio_libtftscope ResponsiveAnalogRead teensy_eurorack_library ST7735_t3 Audio Wire SPI arm_math cores)
target_link_libraries(audio_only_full_bandwidth.elf m stdc++)