cmake_minimum_required(VERSION 3.10)
project(audio_cv_scope)
set(SOURCEFILES 01_audiocv_scope.cpp)
teensy_add_executable(audio_cv_scope ${SOURCEFILES})
teensy_target_link_libraries(audio_cv_scope teensy_eurorack_library ST7735_t3 Audio SD SdFat Wire SPI arm_math cores)
target_link_libraries(audio_cv_scope.elf m stdc++)